unpackaged/main/default/objects/pse__Forecast_Setup_Category__c/pse__Forecast_Setup_Category__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedSetupCategoryHelp</customHelpPage>
    <description>Stores details about the weighted billing forecast categories, such as Best Case or Expected, used in a billing forecast calculation. There must be at least one category assigned to the billing forecast setup details for a billing forecast calculation to run.</description>
    <label>Billing Forecast Setup Category</label>
    <nameField>
        <displayFormat>FSetupCategory-{0000}</displayFormat>
        <label>Billing Forecast Setup Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Setup Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>