unpackaged/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Billings_Actuals__c.field-meta.xml
<CustomField>
    <fullName>pse__Billings_Actuals__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>The multiplier applied to the actual billable amount on a project. This includes Billed Timecards, Billed Milestones and Miscellaneous Adjustments.</description>
    <inlineHelpText>The multiplier applied to the actual billable amount on a project. This includes Billed Timecards, Billed Milestones and Miscellaneous Adjustments.</inlineHelpText>
    <label>Billings</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>