unpackaged/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Expense_Actuals__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense_Actuals__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>The multiplier applied to the expenses on a project. This is the billable amount of the expenses.</description>
    <inlineHelpText>The multiplier applied to the expenses on a project. This is the billable amount of the expenses.</inlineHelpText>
    <label>Expenses</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>