unpackaged/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Order__c.field-meta.xml
<CustomField>
    <fullName>pse__Order__c</fullName>
    <description>The order the billing forecast categories are applied in the billing forecast calculation. You can enter values from 1 to 3.</description>
    <inlineHelpText>The order the billing forecast categories are applied in the billing forecast calculation. You can enter values from 1 to 3.</inlineHelpText>
    <label>Category Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>