unpackaged/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Ordinal__c.field-meta.xml
<CustomField>
    <fullName>pse__Ordinal__c</fullName>
    <description>This field is deprecated.</description>
    <inlineHelpText>This field has been deprecated and been replaced by Order__c</inlineHelpText>
    <label>zDeprecated:Category Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>