unpackaged/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Scheduled_Held_Resource_Requests__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Held_Resource_Requests__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>The multiplier applied to the resource request hours on a project, when the Resource Held field is checked.</description>
    <inlineHelpText>The multiplier applied to the resource request hours on a project, when the Resource Held field is checked.</inlineHelpText>
    <label>Held Resource Requests</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>