unpackaged/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Scheduled_Milestones__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Milestones__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>The multiplier applied to the value of the scheduled milestones for a project.</description>
    <inlineHelpText>The multiplier applied to the value of the scheduled milestones for a project.</inlineHelpText>
    <label>Scheduled Milestones</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>