unpackaged/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Scheduled_Unheld_Resource_Requests__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Unheld_Resource_Requests__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>The multiplier applied to the planned resource request hours for a project, when the Resource Held field is unchecked.</description>
    <inlineHelpText>The multiplier applied to the planned resource request hours for a project, when the Resource Held field is unchecked.</inlineHelpText>
    <label>Unheld Resource Requests</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>