unpackaged/main/default/objects/pse__Forecast_Setup_Category__c/fields/pse__Unscheduled_Backlog__c.field-meta.xml
<CustomField>
    <fullName>pse__Unscheduled_Backlog__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>The multiplier applied to the value of the unscheduled backlog on a project, using the value generated by the backlog calculation.</description>
    <inlineHelpText>The multiplier applied to the value of the unscheduled backlog on a project, using the value generated by the backlog calculation.</inlineHelpText>
    <label>Unscheduled Backlog</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>